# jami-libclient

./: .clang-format  .cqfdrc  .gitignore  .gitmodules  .gitreview  0001-testing.patch  CMakeLists.txt  Diagram1.dia  INSTALL  INSTALL.md  License.rtf  Messages.sh  README.md  changelog.md  compile_tests.sh  config.ini  copy-runtime-files.ps1  copy-runtime-files.py  gen-resources.py  genpot.sh  groups  ico.rc  jami-qt.appdata.xml  jami-qt.desktop  jami-qt.desktop.autostart  jami-qt.pro  jami-qt.sln  make-client.py  make-lrc.bat  make-lrc.py  meson.build  meson_options.txt  project.config  projectcredits.html  qml.qrc  qrencode-win32.patch  qt.conf  qtquickcontrols2.conf  release.sh  resources.qrc  (+7 more)
src/: AccountMigrationView.qml  CMakeLists.txt  DaemonReconnectWindow.qml  LRCAbstractListModelBase.h  LayoutManager.qml  MainApplicationWindow.qml  _contactinfo.h  _contactmodel.cpp  _contactmodel.h  _conversation.h  _conversationmodel.cpp  _conversationmodel.h  _message.h  _newcallmodel.cpp  _newcallmodel.h  abstractbookmarkmodel.h  abstractitembackend.cpp  abstractitembackend.h  abstractitemmodelbase.h  abstractlistmodelbase.h  account.cpp  account.h  accountadapter.cpp  accountadapter.h  accountinfo.h  accountlistcolorizerdefault.cpp  accountlistcolorizerdefault.h  accountlistmodel.cpp  accountlistmodel.h  accountmodel.cpp  accountmodel.h  accountstatusmodel.cpp  accountstatusmodel.h  accountstomigratelistmodel.cpp  accountstomigratelistmodel.h  actionextenderdefault.cpp  actionextenderdefault.h  appsettingsmanager.cpp  appsettingsmanager.h  audiocodeclistmodel.cpp  (+418 more)
src/api/: account.h  avmodel.h  behaviorcontroller.h  behaviourcontroller.h  call.h  callparticipantsmodel.h  chatview.h  collection.h  contact.h  contactmodel.h  contactmodeli.h  conversation.h  conversationmodel.h  conversationmodeli.h  datatransfer.h  datatransfermodel.h  element.h  frame_buffer.h  interaction.h  lrc.h  mediamodel.h  member.h  message.h  newaccountmodel.h  newaccountmodeli.h  newcallmodel.h  newcallmodeli.h  newcodecmodel.h  newdevicemodel.h  newvideo.h  peerdiscoverymodel.h  pluginmodel.h  profile.h  smartlist.h  video.h  video_frame_buffer.h
src/audio/: alsapluginmodel.cpp  alsapluginmodel.h  codecmodel.cpp  codecmodel.h  inputdevicemodel.cpp  inputdevicemodel.h  managermodel.cpp  managermodel.h  outputdevicemodel.cpp  outputdevicemodel.h  ringtonedevicemodel.cpp  ringtonedevicemodel.h  settings.cpp  settings.h
src/authority/: daemon.cpp  daemon.h  database.h  databasehelper.cpp  databasehelper.h  storagehelper.cpp  storagehelper.h
src/collections/: conversationList.cpp  peerDiscovery.cpp  searchResultList.cpp  temporaryItem.cpp  trustRequestList.cpp
src/com.savoirfairelinux.ring 2019-11-10 22:33.02.150.xcappdata/: AppDataInfo.plist
src/commoncomponents/: AccountMigrationDialog.qml  Avatar.qml  AvatarImage.qml  BackButton.qml  BaseContextMenu.qml  BaseDialog.qml  BaseModalDialog.qml  BubbleLabel.qml  CustomBorder.qml  DaemonReconnectPopup.qml  DataTransferMessageDelegate.qml  DeleteAccountDialog.qml  ElidedTextLabel.qml  GeneralMenuItem.qml  GeneralMenuSeparator.qml  GeneralWebEngineView.qml  GeneratedMessageDelegate.qml  HalfPill.qml  HoverableButton.qml  HoverableButtonTextItem.qml  HoverableRadiusButton.qml  InfoLineEdit.qml  JamiFileDialog.qml  JamiFlickable.qml  JamiListView.qml  JamiScrollBar.qml  JamiSwitch.qml  JamiTextArea.qml  LineEditContextMenu.qml  ListViewJami.qml  LookupStatusLabel.qml  MaterialButton.qml  MaterialLineEdit.qml  MaterialToolTip.qml  MessageBox.qml  MessageBubble.qml  MessageDelegate.qml  ModalPopup.qml  PasswordDialog.qml  PhotoboothView.qml  (+16 more)
src/constant/: JamiQmlUtils.qml  JamiResources.qml  JamiStrings.qml  JamiTheme.qml  MsgSeq.qml
src/daemonproxies/: daemonproxy-dbus.hpp  daemonproxy-library.cpp  daemonproxy-library.h  daemonproxysignals.h
src/data/: account.h  call.h  contact.h  conversation.h  message.h
src/database/: sqlmanager.cpp  sqlmanager.h  sqlmanager.hpp  sqlmigratorhelper.cpp  sqlmigratorhelper.h
src/dbus/: callmanager.cpp  callmanager.h  configurationmanager.cpp  configurationmanager.h  conversationmanager.cpp  conversationmanager.h  datatransferdbusmanager.cpp  datatransferdbusmanager.h  datatransfermanager.cpp  datatransfermanager.h  instancemanager.cpp  instancemanager.h  metatypes.h  pluginmanager.cpp  pluginmanager.h  presencemanager.cpp  presencemanager.h  videomanager.cpp  videomanager.h
src/delegates/: accountlistcolordelegate.cpp  accountlistcolordelegate.h  certificateserializationdelegate.cpp  certificateserializationdelegate.h  contactmethodselectordelegate.h  dbuserrordelegate.cpp  dbuserrordelegate.h  delegatemanager.cpp  delegatemanager.h  delegates.cpp  delegates.h  itemmodelstateserializationdelegate.cpp  itemmodelstateserializationdelegate.h  numbercategorydelegate.cpp  numbercategorydelegate.h  phonenumberselectordelegate.cpp  phonenumberselectordelegate.h  pixmapmanipulationdelegate.cpp  pixmapmanipulationdelegate.h  presenceserializationdelegate.cpp  presenceserializationdelegate.h  profilepersisterdelegate.cpp  profilepersisterdelegate.h  shortcutdelegate.cpp  shortcutdelegate.h
src/extensions/: presencecollectionextension.cpp  presencecollectionextension.h  securityevaluationextension.cpp  securityevaluationextension.h
src/interfaces/: accountlistcolorizerdefault.h  accountlistcolorizeri.h  actionextenderi.h  contactmethodselectori.h  dbuserrorhandleri.h  instances.cpp  instances.h  itemmodelstateserializeri.h  pixmapmanipulatordefault.h  pixmapmanipulatori.h  presenceserializerdefault.cpp  presenceserializerdefault.h  presenceserializeri.h  profilepersisterdefault.h  profilepersisteri.h  shortcutcreatordefault.cpp  shortcutcreatordefault.h  shortcutcreatori.h
src/mainview/: MainView.qml
src/media/: audio.cpp  audio.h  avrecording.cpp  avrecording.h  file.cpp  file.h  media.cpp  media.h  recording.cpp  recording.h  recordingmodel.cpp  recordingmodel.h  text.cpp  text.h  textrecording.cpp  textrecording.h  video.cpp  video.h
src/private/: account_p.h  accountmodel_p.h  call_p.h  (+43 more)
tests/: CMakeLists.txt
(+568 files in other folders)
